# PrometheanProxy

./: .flake8  .gitignore  .gitmodules  BEACONS_WEB_INTERFACE.md  CLAUDE.md  CMakeLists.txt  Makefile  PLUGINS.md  README.MD  README.md  client_linux.elf  docker-compose.yml  requirements.txt  web_requirements.txt
.github/: ci.yml  fortnightly-build.yml
.github/workflows/: ci.yml
docs/: WEB_INTERFACE.md  architecture.md  overview.md  plugins.md  usage.md
plugins/disk_usage/: go.mod  go.sum  main.go
plugins/diskusage/: main.go
plugins/download_file/: go.sum  main.go
plugins/list_directory/: main.go
plugins/netstat/: go.mod  go.sum  main.go
plugins/processes/: main.go
plugins/services/: go.sum  main.go
plugins/system_info/: go.mod
plugins/systeminfo/: go.mod  main.go
plugins/template/: main.go
plugins/upload_file/: go.mod  main.go
server/web/: web_server.py
src/Client/: Makefile  client.py  file_transfer.c  go.mod  go.sum  main.c  main.go  shell.h  systeminfo.c
src/Client/Client_C/: Makefile  client.elf  main.c
src/Client/Client_C++/: CMakeLists.txt  main.cpp
src/Client/Client_C++/Generic/: config.cpp  config.h  config.hpp  generic_funcs.cpp  generic_funcs.hpp  httpRequests.cpp  httpRequests.h  httpRequests.hpp  logging.cpp  logging.hpp  urlObfuscation.cpp  urlObfuscation.hpp
src/Client/Client_C++/Generic/beacon/: httpRequests.cpp  httpRequests.hpp  urlObfuscation.cpp
src/Client/Client_C++/Generic/session/: session.cpp  session.hpp
src/Client/Client_C++/Linux/: generic.cpp  generic.h  generic.hpp
src/Client/Client_C++/Linux/Beacon/: beacon_commands.cpp  beacon_commands.h  beacon_commands.hpp
src/Client/Client_C++/Linux/Session/: session.cpp  session.hpp
src/Client/Client_C++/Windows/: generic.cpp  generic.hpp
src/Client/Client_C++/Windows/Beacon/: beacon_commands.cpp  beacon_commands.h  directory_traversal.cpp  directory_traversal.h  images.cpp  images.h
src/Client/Client_C++/Windows/Session/: session.cpp  session.hpp
src/Client/Client_C/Generic/: hash_file.c  hash_file.h  hashing.c  hashing.h  server_handler.c  server_handler.h  string_manipulation.c  string_manipulation.h
src/Client/Client_C/Linux/: file_transfer.c  list_dir.c  send_receive.c  shell.c  socket.c  socket.h  systeminfo.c  systeminfo.h
src/Client/Client_C/Windows/: file_transfer.h  list_dir.c  list_dir.h  send_receive.c  send_receive.h  shell.c  socket.c  socket.h  systeminfo.c  systeminfo.h
src/Client/beacon/beaconHandler/: beacon.go  commands.go  handler.go  utils.go
src/Client/beacon/http/: httpRequests.go  urlObfuscation.go
src/Client/dynamic/: interpreter.go
src/Client/dynamic/shared/: command.go
src/Client/generic/commands/: commands.go  directoryTraversal.go  listDirectory.go  shellCommands.go  systemInfo.go
src/Client/generic/config/: config.go  config_debug.go  config_nodebug.go  obfuscation_map.go
src/Client/generic/interpreter_client/: client.go
src/Client/generic/logger/: logger.go
src/Client/generic/rpc_client/: client.go
src/Client/generic/stateEncryption/: stateEncryption.go
src/Client/session/: commandHandler.go  protocol.go  session.go  sessionConnect.go
src/Client/session/protocol/: protocol.go
src/RemoteServer/: server.py  transfer.py
src/Server/: Dockerfile  config.toml  directory_traversal.json  obfuscate.json  server.py  setup_py2exe.py
src/Server/Modules/: GUI.py  authentication.py  beacon.py  beacon_commands.py  config_configuration.py  content_handler.py  file_manager.py  global_objects.py  http_server.py  initial_setup.py  lets_encrypt.py  logging.py  multi_handler.py  multi_handler_commands.py  session.py  sessions_commands.py
src/Server/Modules/beacon/: beacon.py  command.py  connection.py  core.py  history.py  modules.py  registry.py
src/Server/Modules/beacon_server/: request_handler.py  router.py  server.py  socket_manager.py  utils.py
src/Server/Modules/html/: coming_soon.html
src/Server/Modules/multi_handler/: core.py  loader.py  multi_handler.py  multi_handler_commands.py  security.py  socket_server.py
src/Server/Modules/multiplayer/: lets_encrypt.py  mp_client.py  mp_socket.py  mp_users.py  multiplayer.py  web_interface.py
src/Server/Modules/session/: core.py  registry.py  session.py  transfer.py
src/Server/Modules/utils/: authentication.py  config_configuration.py  console.py  content_handler.py  file_manager.py  initial_setup.py  logging.py  ui_manager.py
src/Server/Modules/web_server/: README.md  __init__.py  django_server.py
src/Server/PacketSniffing/: PacketSniffer.py
src/Server/Plugins/: __init__.py
src/Server/Plugins/netstat/: go.mod  go.sum  main.go  netstat.py  obfuscate.json
src/Server/Plugins/processes/: __init__.py  go.mod  main.go  obfuscate.json  processes.py
src/Server/Plugins/shell/: __init__.py  shell.py
src/Server/Plugins/system_info/: go.mod  go.sum  main.go  obfuscate.json  system_info.py
src/Server/Plugins/template/: go.mod  go.sum  main.go  obfuscate.json  template.py
src/Server/Plugins/whoami/: __init__.py  extrastubs_others.go  go.mod  go.sum  linuxstubs_windows.go  linuxtools_linux.go  main.go  obfuscate.json  whoami.py  winextra_windows.go  winpriv_stub.go  winpriv_windows.go  winstubs_linux.go
src/Server/ServerDatabase/: database.py
src/Server/WebUI/: beacon.py  http.py  index.py  session.py  utils.py
src/Server/WebUI/static/: beaconControl.js  beaconHome.js  parser.worker.js  script.js  styles.css
src/Server/WebUI/templates/: beacon.html  index.html
src/Server/plugins/netstat/: netstat.py
src/Server/plugins/system_info/: __init__.py  system_info.py
src/Server/proxy/: Dockerfile  nginx.conf
src/Server/proxy/beacon/: Dockerfile  nginx.conf
src/Server/proxy/session/: Dockerfile  nginx.conf
src/Server/res/: config.toml
src/Server/web/: .env  Dockerfile  QUICKSTART.md  README.md  db.sqlite3  manage.py  start_web.sh
tests/: authentication_test.py  config_configuration_test.py  content_handler_test.py  global_objects_test.py  multihandler_commands_tests.py  session_commands_test.py
~/.PrometheanProxy/Certificates/: hmac.key
(+63 files in other folders)
